--- a/src/app/pages/home/navbar/navbar.component.css
+++ b/src/app/pages/home/navbar/navbar.component.css
@@ -434,8 +434,10 @@
   }
 }
 .navbar-logo-img {
-  height: 75px;
+  height: 50px;
   width: auto;
+  max-width: 150px;
+  object-fit: contain;
 }
 
 .navbar.scrolled .navbar-logo-img {
